k8s/manifests-de1392/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-de1392
  namespace: journee
  labels:
    app: journee-de1392
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-de1392
  template:
    metadata:
      labels:
        app: journee-de1392
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-de1392
          image: gcr.io/my-docker-471807/journee:v5.5.0
          ports:
            - containerPort: 3000
