k8s/manifests-de1392/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-de1392
  namespace: journee
spec:
  selector:
    app: journee-de1392
  ports:
    - port: 80
      targetPort: 3000
